<resources>
    <string name="app_name">Quiz Game</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="or">OR</string>
    <string name="account">Don\'t have an account?<font color='#5b39c6'>Sign Up</font> </string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="signup">Sign Up</string>
    <string name="email_hint">Enter your Email</string>
    <string name="continue_btn">Continue</string>
    <string name="default_web_client_id">https://348772804337-9jvrsupvgavaurua9cnesb0qtu7m37ts.apps.googleusercontent.com/</string>

</resources>